--- a/package.json
+++ b/package.json
@@ -20,9 +20,15 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "@angular/animations": "^4.0.0",
     "core-js": "^2.4.1",
     "rxjs": "^5.1.0",
-    "zone.js": "^0.8.4"
+    "zone.js": "^0.8.4",
+    "@progress/kendo-angular-charts" : "1.1.0",
+    "@progress/kendo-angular-intl" : "1.0.0",
+    "@progress/kendo-angular-l10n" : "1.0.0",
+    "@progress/kendo-drawing" : "1.0.3",
+    "hammerjs" : "2.0.8"
   },
   "devDependencies": {
     "@angular/cli": "1.0.3",
